--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+#navlink a {
+    background-color: white;
+    color: black;
+}
+#navlink a:active {
+    background-color: white;
+}
